# bazel-guacamole

./: BUILD.bazel  README.md  WORKSPACE  go.mod
gotest/: BUILD.bazel  client.go  client_test.go
libs/: BUILD.bazel
patches/: guacamole-disable-lib-checks.patch  uuid-autogen-executable.patch
