load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gotest",
    srcs = ["client.go"],
    cgo = True,
    cdeps = ["//:guacamole"],
    importpath = "github.com/connyay/bazel-guacamole/gotest",
    visibility = ["//visibility:public"],
)

go_test(
    name = "gotest_test",
    srcs = ["client_test.go"],
    embed = [":gotest"],
)
